# tetris

./: LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg
tests/component/: conftest.py  test_board.py  test_cell.py  test_piece.py
tetris/: __main__.py  constants.py  exceptions.py
tetris/components/: __init__.py  board.py  cell.py  piece.py
