[metadata]
name = tetris
author = Pierre Savatte
author-email = pierre-savatte@laposte.net
description = A plagiarism of Tetris (apparently some well-known game from the '90)
description-file = README.md

[files]
packages =
    tetris

[entry_points]
console_scripts =
    tetris = tetris.__main__:main